fix dark mode

--- a/src/scss/theme/dark/page.scss
+++ b/src/scss/theme/dark/page.scss
@@ -202,3 +202,11 @@
         .item.add:hover { background: $colorHover; }
     }
 }
+
+/* PageMainEmpty */
+
+.pageMainEmpty {
+    .wrapper {
+        .row { border-color: $colorLinePrimary; }
+    }
+}
